plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'idea'

    id 'com.modrinth.minotaur' version '2.+'
    id "net.darkhax.curseforgegradle" version "1.1.28"
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id
def modrinthToken = project.findProperty("modrinthToken")
def curseforgeToken = project.findProperty("curseforgeToken")

repositories {
    mavenCentral()
}

base {
    archivesName = "${mod_id}-${minecraft_version}"
}

java{
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    jarJar(implementation("de.javagl:jgltf-model")) {
        version {
            strictly "[2.0,3.0)"
            prefer "2.0.3"
        }
    }

    jarJar(implementation("de.javagl:jgltf-impl-v1")) {
        version {
            strictly "[2.0,3.0)"
            prefer "2.0.3"
        }
    }

    jarJar(implementation("de.javagl:jgltf-impl-v2")) {
        version {
            strictly "[2.0,3.0)"
            prefer "2.0.3"
        }
    }

    jarJar(implementation("com.fasterxml.jackson.core:jackson-databind")) {
        version {
            strictly "[2.10, 2.20)"
            prefer "2.13.2.1"
        }
    }

    jarJar(implementation("com.fasterxml.jackson.core:jackson-annotations")) {
        version {
            strictly "[2.10, 2.20)"
            prefer "2.13.2"
        }
    }

    jarJar(implementation("com.fasterxml.jackson.core:jackson-core")) {
        version {
            strictly "[2.10, 2.20)"
            prefer "2.13.2"
        }
    }

    clientAdditionalRuntimeClasspath "de.javagl:jgltf-model:2.0.3"
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

modrinth {
    token = modrinthToken
    projectId = "73TaZXLZ"
    versionNumber = mod_version
    versionName = "${mod_name}-${minecraft_version}-${mod_version}"
    uploadFile = tasks.jar.getArchiveFile()
    additionalFileDsl.sourcesJar(tasks.sourcesJar.getArchiveFile())
    changelog = project.file("changelog.md").text
    gameVersions = ["1.21.1"]
    loaders = ["neoforge"]
}

tasks.register("publishCurseForge", net.darkhax.curseforgegradle.TaskPublishCurseForge) {
    apiToken = curseforgeToken

    dependsOn tasks.jar
    dependsOn tasks.sourcesJar

    disableVersionDetection()

    def mainFile = upload("1484554", tasks.jar.archiveFile)
    mainFile.changelog = file('changelog.md')
    mainFile.changelogType = Constants.CHANGELOG_MARKDOWN;
    mainFile.displayName = "${mod_name}-${minecraft_version}-${mod_version}"
    mainFile.releaseType = "release"
    mainFile.addGameVersion("1.21.1")
    mainFile.addModLoader("NeoForge")
    mainFile.addEnvironment("Client")
    mainFile.addEnvironment("Server")
    mainFile.addJavaVersion("Java 21")

    def sourcesFile = mainFile.withAdditionalFile(sourcesJar)
    sourcesFile.changelog = file('changelog.md')
    sourcesFile.displayName = "${mod_name}-${minecraft_version}-${mod_version}-sources"
}

tasks.register("publishMods") {
    dependsOn "modrinth"
    dependsOn "publishCurseForge"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
